[gd_scene load_steps=10 format=3 uid="uid://b6fwt1mqc8rxa"]

[ext_resource type="Script" path="res://TileScripts/BasicTile.gd" id="1_lk02w"]

[sub_resource type="BoxMesh" id="BoxMesh_1jv40"]
size = Vector3(10, 0.3, 10)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_u2rnh"]
transparency = 1
albedo_color = Color(1, 1, 1, 0)

[sub_resource type="ArrayMesh" id="ArrayMesh_1l05b"]
_surfaces = [{
"aabb": AABB(-5.28868, -0.438675, -5.28868, 10.5774, 0.87736, 10.5774),
"attribute_data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 171, 170, 42, 63, 0, 0, 0, 0, 171, 170, 170, 62, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 63, 171, 170, 42, 63, 0, 0, 0, 63, 171, 170, 170, 62, 0, 0, 0, 63, 0, 0, 128, 63, 0, 0, 0, 63, 171, 170, 170, 62, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 63, 171, 170, 42, 63, 0, 0, 0, 0, 171, 170, 170, 62, 0, 0, 0, 63, 171, 170, 170, 62, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 128, 63, 171, 170, 42, 63, 0, 0, 0, 63, 171, 170, 170, 62, 0, 0, 128, 63, 171, 170, 170, 62, 0, 0, 0, 63, 171, 170, 42, 63, 0, 0, 0, 63, 171, 170, 42, 63, 0, 0, 0, 63, 0, 0, 128, 63, 0, 0, 0, 63, 171, 170, 170, 62, 0, 0, 128, 63, 171, 170, 42, 63, 0, 0, 128, 63, 171, 170, 42, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63),
"format": 34359742487,
"index_count": 36,
"index_data": PackedByteArray(0, 0, 4, 0, 2, 0, 2, 0, 4, 0, 6, 0, 1, 0, 5, 0, 3, 0, 3, 0, 5, 0, 7, 0, 8, 0, 12, 0, 10, 0, 10, 0, 12, 0, 14, 0, 9, 0, 13, 0, 11, 0, 11, 0, 13, 0, 15, 0, 16, 0, 20, 0, 18, 0, 18, 0, 20, 0, 22, 0, 17, 0, 21, 0, 19, 0, 19, 0, 21, 0, 23, 0),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray(212, 60, 169, 192, 7, 154, 224, 62, 212, 60, 169, 64, 212, 60, 169, 64, 7, 154, 224, 62, 212, 60, 169, 192, 212, 60, 169, 64, 7, 154, 224, 62, 212, 60, 169, 64, 212, 60, 169, 192, 7, 154, 224, 62, 212, 60, 169, 192, 212, 60, 169, 192, 7, 154, 224, 190, 212, 60, 169, 64, 212, 60, 169, 64, 7, 154, 224, 190, 212, 60, 169, 192, 212, 60, 169, 64, 7, 154, 224, 190, 212, 60, 169, 64, 212, 60, 169, 192, 7, 154, 224, 190, 212, 60, 169, 192, 212, 60, 169, 64, 7, 154, 224, 62, 212, 60, 169, 64, 212, 60, 169, 192, 7, 154, 224, 62, 212, 60, 169, 192, 212, 60, 169, 64, 7, 154, 224, 62, 212, 60, 169, 192, 212, 60, 169, 192, 7, 154, 224, 62, 212, 60, 169, 64, 212, 60, 169, 64, 7, 154, 224, 190, 212, 60, 169, 64, 212, 60, 169, 192, 7, 154, 224, 190, 212, 60, 169, 192, 212, 60, 169, 64, 7, 154, 224, 190, 212, 60, 169, 192, 212, 60, 169, 192, 7, 154, 224, 190, 212, 60, 169, 64, 212, 60, 169, 64, 7, 154, 224, 62, 212, 60, 169, 64, 212, 60, 169, 192, 7, 154, 224, 190, 212, 60, 169, 64, 212, 60, 169, 192, 7, 154, 224, 62, 212, 60, 169, 64, 212, 60, 169, 64, 7, 154, 224, 190, 212, 60, 169, 64, 212, 60, 169, 64, 7, 154, 224, 62, 212, 60, 169, 192, 212, 60, 169, 192, 7, 154, 224, 190, 212, 60, 169, 192, 212, 60, 169, 192, 7, 154, 224, 62, 212, 60, 169, 192, 212, 60, 169, 64, 7, 154, 224, 190, 212, 60, 169, 192, 255, 127, 255, 127, 255, 255, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 255, 255, 0, 128, 255, 255, 255, 255, 0, 0, 0, 128, 255, 127, 255, 191, 255, 255, 0, 128, 255, 255, 255, 255, 0, 0, 0, 128, 255, 127, 255, 191, 255, 255, 0, 128, 255, 255, 255, 255, 0, 0, 0, 128, 255, 127, 255, 191, 255, 255, 0, 128, 255, 255, 255, 255, 0, 0, 0, 128, 255, 127, 255, 191, 0, 128, 255, 255, 0, 0, 255, 191, 0, 128, 0, 0, 255, 255, 255, 191, 0, 128, 255, 255, 0, 0, 255, 191, 0, 128, 0, 0, 255, 255, 255, 191, 0, 128, 255, 255, 0, 0, 255, 191, 0, 128, 0, 0, 255, 255, 255, 191, 0, 128, 255, 255, 0, 0, 255, 191, 0, 128, 0, 0, 255, 255, 255, 191)
}]

[sub_resource type="Animation" id="Animation_l0hru"]
resource_name = "HoverFade"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshTile/MeshOutline:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1.1, 1.1, 1.1), Vector3(1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xeq6y"]
_data = {
"HoverFade": SubResource("Animation_l0hru")
}

[sub_resource type="PlaneMesh" id="PlaneMesh_vt8yx"]
size = Vector2(10.5, 10.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_jgixa"]
size = Vector3(10, 1.5, 10)

[sub_resource type="BoxMesh" id="BoxMesh_hxgo8"]
size = Vector3(10, 1.5, 10)

[node name="BasicTile" type="Node3D"]
script = ExtResource("1_lk02w")

[node name="MeshTile" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.35, 0)
mesh = SubResource("BoxMesh_1jv40")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_u2rnh")

[node name="MeshOutline" type="MeshInstance3D" parent="MeshTile"]
mesh = SubResource("ArrayMesh_1l05b")

[node name="AnimationPlayer" type="AnimationPlayer" parent="MeshTile/MeshOutline"]
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_xeq6y")
}

[node name="MeshClickedEffectTest" type="MeshInstance3D" parent="MeshTile"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
visible = false
mesh = SubResource("PlaneMesh_vt8yx")
skeleton = NodePath("../MeshOutline")

[node name="HoverAreaBasicTile" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="HoverAreaBasicTile"]
shape = SubResource("BoxShape3D_jgixa")

[node name="PlaceholderTest" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("BoxMesh_hxgo8")

[connection signal="mouse_entered" from="HoverAreaBasicTile" to="." method="_on_hover_area_basic_tile_mouse_entered"]
[connection signal="mouse_exited" from="HoverAreaBasicTile" to="." method="_on_hover_area_basic_tile_mouse_exited"]
